@@ -5,32 +5,28 @@ import static java.util.Map.entry;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
-import java.util.function.BiFunction;
-import java.util.stream.Collectors;
+import java.util.function.Predicate;
 import org.locationtech.jts.geom.Envelope;
 import org.locationtech.jts.geom.Geometry;
-import org.opentripplanner.apis.support.mapping.PropertyMapper;
 import org.opentripplanner.ext.vectortiles.VectorTilesResource;
 import org.opentripplanner.inspector.vector.LayerBuilder;
 import org.opentripplanner.inspector.vector.LayerParameters;
 import org.opentripplanner.transit.model.site.RegularStop;
 import org.opentripplanner.transit.service.TransitService;
 
-public class StopsLayerBuilder<T> extends LayerBuilder<T> {
+public class StopsLayerBuilder extends LayerBuilder<RegularStop> {
 
-  static Map<MapperType, BiFunction<TransitService, Locale, PropertyMapper<RegularStop>>> mappers = Map.of(
-    MapperType.Digitransit,
-    DigitransitStopPropertyMapper::create
-  );
   private final TransitService transitService;
+  private final Predicate<RegularStop> filter;
 
   public StopsLayerBuilder(
     TransitService transitService,
     LayerParameters<VectorTilesResource.LayerType> layerParameters,
-    Locale locale
+    Locale locale,
+    Predicate<RegularStop> filter
   ) {
     super(
-      (PropertyMapper<T>) Map
+      Map
         .ofEntries(
           entry(MapperType.Digitransit, new DigitransitStopPropertyMapper(transitService, locale)),
           entry(
@@ -43,12 +39,14 @@ public class StopsLayerBuilder<T> extends LayerBuilder<T> {
       layerParameters.expansionFactor()
     );
     this.transitService = transitService;
+    this.filter = filter;
   }
 
   protected List<Geometry> getGeometries(Envelope query) {
     return transitService
       .findRegularStops(query)
       .stream()
+      .filter(filter)
       .map(stop -> {
         Geometry point = stop.getGeometry();
 
@@ -56,7 +54,7 @@ public class StopsLayerBuilder<T> extends LayerBuilder<T> {
 
         return point;
       })
-      .collect(Collectors.toList());
+      .toList();
   }
 
   enum MapperType {
